# gameboy-emulator

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build_with_cmake.sh  count_instructions.sh  debug_code.cpp  install_dep.sh  main.cpp
.github/workflows/: build_artifacts.yml  cmake.yml  docker-image.yml
roms-example/: hello-world.gb
src/: CMakeLists.txt
src/game/: CMakeLists.txt  LCDC.cpp  LCDC.h  STAT.cpp  STAT.h  cpu.cpp  cpu.h  cpu_utils.cpp  cpu_utils.h  emulator_definitions.h  game.cpp  game.h  hardware_definitions.h  hardware_registers.h  keypad.cpp  keypad.h  memory.cpp  memory.h  opcodes.h  palette.cpp  palette.h  ppu.cpp  ppu.h  primitives.h  tile.cpp  tile.h  timer_registers.cpp  timer_registers.h
src/game/cpu/: cb_prefixed_opcodes.h  cpu.cpp  cpu.h  cpu_instructions.cpp  cpu_prefixed_instructions.cpp  cpu_utils.cpp  cpu_utils.h  instructions_size.cpp  instructions_size.h  interrupts.cpp  interrupts.h  opcodes.h
src/gui/: CMakeLists.txt  gameboy_gui.cpp  gameboy_gui.h  gui_definitions.h
src/utils/: CMakeLists.txt  functions.cpp  functions.h  read_rom.cpp  read_rom.h  register_F_manipulate.cpp  register_F_manipulate.h
tests/: CMakeLists.txt  arithmetic.cpp  initialize_registers.cpp  interrupts.cpp  keypad.cpp  memory.cpp  palette.cpp  ppu.cpp  prefixed_instructions.cpp  timer_registers.cpp  unit_test.cpp  utils.cpp
